# Robotic_Arm_Simulation

./: requirements.txt
.venv-1/: pyvenv.cfg
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/launch/: pick_place.launch.py
hello_moveit/src/: hello_moveit.cpp  pick_place.cpp
rl_agent/: README.md  arm_backend.py  arm_env.py  reward.py  robot_state.py  test_trajectory.py  train.py  trajectory_client.py
simulation video/: v1.webm
